add artist page

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-items-carousel": "^2.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-spotify-web-playback": "^0.6.0"
+    "react-spotify-web-playback": "^0.6.0",
+    "simplebar-react": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
